# problem-solvling-cpp

./: CMakeLists.txt
arrays/: average in array.cpp  copy array.cpp  copy only prime numbers in array.cpp  digit freq.cpp  encrypte decrypte text.cpp  fill array with random numbers.cpp  frequancy for number.cpp  generate keys.cpp  get max in array.cpp  get min element in array.cpp  guess a 3-letters password.cpp  inverted letter pattern.cpp  inverted number.cpp  number pattern.cpp  palindrome number.cpp  perfect number .cpp  print digits in order.cpp  print letter pattern.cpp  print perfect numbers.cpp  print prime number.cpp  print reverse digits.cpp  print sum of digits.cpp  random advance.cpp  random number.cpp  repeated elemnts count in arrayd.cpp  reverse number.cpp  sum all numbers in array.cpp  sum of two arrays.cpp  table of multiplication  .cpp  words from aaa to zzz.cpp
fundamentals/: problem 28.cpp  problem 29.cpp  problem 30.cpp  problem 31.cpp  problem 32.cpp  problem 33.cpp  problem 34.cpp  problem 35.cpp  problem 37.cpp  problem 38 .cpp  problem 39.cpp  problem 40.cpp  problem 41.cpp  problem 42.cpp  problem 43.cpp  problem 44.cpp  problem 45.cpp  problem 46.cpp  problem 47.cpp  problem 48.cpp  problem 49.cpp  problem 50.cpp
