cmake_minimum_required(VERSION 4.0)
project(myc__probem_solving)

set(CMAKE_CXX_STANDARD 20)

add_executable(myc__probem_solving "fundamentals /problem1.cpp"
        "fundamentals /problem2.cpp"
        "fundamentals /problem3.cpp"
        "fundamentals /problem4.cpp"
        "fundamentals /problem5.cpp"
        "fundamentals /problem6.cpp"
        "fundamentals /problem7.cpp"
        "fundamentals /problem8.cpp"
        "fundamentals /problem9.cpp"
        "fundamentals /problem10.cpp"
        "fundamentals /problem11.cpp"
        "fundamentals /problem12.cpp"
        "fundamentals /problem13.cpp"
        "fundamentals /problem14.cpp"
        "fundamentals /problem15.cpp"
        "fundamentals /problem16.cpp"
        "fundamentals /problem17.cpp"
        "fundamentals /problem18.cpp"
        "fundamentals /problem19.cpp"
        "fundamentals /problem20.cpp"
        "fundamentals /problem21.cpp"
        "fundamentals /problem22.cpp"
        "fundamentals /problem23.cpp"
        "fundamentals /problem24.cpp"
        "fundamentals /problem25.cpp"
        "fundamentals /problem26.cpp"
        "fundamentals /problem27.cpp"
        fundamentals/problem28.cpp
)
